clients/DiveInsurance/view/apps/DiveInsurance/public/css/custom.css
*,
*:before,
*:after {
  box-sizing: border-box;
}

html {
  overflow-y: scroll;
}

body {
  background: #c1bdba;
  font-family: "Titillium Web", sans-serif;
}

a {
  text-decoration: none;
  color: #275362;
  transition: 0.5s ease;
}
a:hover {
  color: #275362;
}

.form {
  padding: 40px;
  margin: 40px auto;
  border-radius: 4px;
  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
}

.tab-group {
  list-style: none;
  padding: 0;
  margin: 0 0 40px 0;
}
.tab-group:after {
  content: "";
  display: table;
  clear: both;
}
.tab-group li a {
  display: block;
  text-decoration: none;
  padding: 15px;
  background: rgba(160, 179, 176, 0.25);
  color: #a0b3b0;
  font-size: 20px;
  float: left;
  width: 50%;
  text-align: center;
  cursor: pointer;
  transition: 0.5s ease;
}
.tab-group li a:hover {
  background: #275362;
  color: #ffffff;
}
.tab-group .active a {
  background: #275362;
  color: #ffffff;
}

.tab-content > div:last-child {
  display: none;
}

h1 {
  text-align: center;
  color: #ffffff;
  font-weight: 300;
  margin: 0 0 40px;
}

.labelField {
  position: relative;
  -webkit-transform: translateY(6px);
  transform: translateY(6px);
  left: 13px;
  transition: all 0.25s ease;
  -webkit-backface-visibility: hidden;
  pointer-events: none;
  font-size: 22px;
  top: 36px;
  left: -80px;
} */

label .req {
  margin: 2px;
  color: #275362;
}

label.active {
  -webkit-transform: translateY(50px);
  transform: translateY(50px);
  font-size: 14px;
  top: -45px;
  position: relative;
  left: -108px;
}
label.active .req {
  opacity: 0;
}

label.highlight {
  color: #434343;
}

.formio-component-submit .submit-success::after{
  font-size: 12px;
  top: 2px;
}

.inputField, textarea {
  font-size: 22px;
  display: block;
  /* width: 100%;
  height: 100%; */
  padding: 5px 10px;
  background: none;
  background-image: none;
  border: 1px solid #a0b3b0;
  border-radius: 0;
  transition: border-color 0.25s ease, box-shadow 0.25s ease;
}
input:focus,
textarea:focus {
  outline: 0;
  border-color: #275362;
}

textarea {
  border: 2px solid #a0b3b0;
  resize: vertical;
}

.field-wrap {
  position: relative;
  margin-bottom: 20px;
}

.top-row:after {
  content: "";
  display: table;
  clear: both;
}
.top-row > div {
  float: left;
  width: 48%;
  margin-right: 4%;
}
.top-row > div:last-child {
  margin: 0;
}

.button {
  border: 0;
  outline: none;
  border-radius: 0;
  padding: 15px 0;
  font-size: 2rem;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  background: #275362;
  color: #ffffff;
  transition: all 0.5s ease;
  -webkit-appearance: none;
}
.button:hover,
.button:focus {
  background: #275362;
}

.hideBorders > td {
  border-top: unset;
}

.button-block {
  display: block;
  width: 100%;
}

.forgot {
  text-align: right;
}

.inputDiv {
  text-align: -webkit-center;
  text-align: -moz-center;
}
.LoginDiv{
  width:40%;
}
.btn-success:hover {
    color: #fff;
    background-color: #275362 !important;
    border-color: #275362 !important;
}
.panel-primary>.panel-heading {
    color: #fff;
    background-color: #275362 !important;
    border-color: #275362 !important;
}
.panel-primary {
    border-color: #275262 !important;
}
.btn-primary{
    background-color: #275362 !important;
    border-color: #275362 !important;
}

label {
  font-size: 12.5px;
  color: #000;
  opacity: .8;
  font-weight: 400;
}
/* input {
  font-size: 16px;
  padding: 20px 0px;
  height: 56px;
  border: none;
  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
  background: #fff;
  width: 280px;
  box-sizing: border-box;
  transition: all .3s linear;
  color: #000;
  font-weight: 400;
  -webkit-appearance: none;
} */
input:focus {
  border-bottom: solid 1px #275362;
  outline: 0;
  box-shadow: 0 2px 6px -8px rgba(182, 157, 230, 0.45);
}
.floating-label {
  position: relative;
  margin-bottom: 10px;
  width: 100%;
}
.floating-label label {
  position: absolute;
  top: calc(50% - 7px);
  left: 0;
  opacity: 0;
  transition: all .3s ease;
  padding-left: 44px;
}
.floating-label input {
  width: calc(100% - 44px);
  margin-left: auto;
  display: flex;
}
.floating-label .icon {
  position: absolute;
  top: 0;
  left: 0;
  height: 56px;
  width: 44px;
  display: flex;
}
.floating-label input:not(:placeholder-shown) {
  padding: 28px 0px 12px 0px;
}
.floating-label input:not(:placeholder-shown) + label {
  -webkit-transform: translateY(-10px);
          transform: translateY(-10px);
  opacity: .7;
}

.floating-label input:not(:valid):not(:focus) + input {
  -webkit-animation-name: shake-shake;
          animation-name: shake-shake;
  -webkit-animation-duration: .3s;
          animation-duration: .3s;
}

@-webkit-keyframes shake-shake {
  0% {
    -webkit-transform: translateX(-3px);
            transform: translateX(-3px);
  }
  20% {
    -webkit-transform: translateX(3px);
            transform: translateX(3px);
  }
  40% {
    -webkit-transform: translateX(-3px);
            transform: translateX(-3px);
  }
  60% {
    -webkit-transform: translateX(3px);
            transform: translateX(3px);
  }
  80% {
    -webkit-transform: translateX(-3px);
            transform: translateX(-3px);
  }
  100% {
    -webkit-transform: translateX(0px);
            transform: translateX(0px);
  }
}

@keyframes shake-shake {
  0% {
    -webkit-transform: translateX(-3px);
            transform: translateX(-3px);
  }
  20% {
    -webkit-transform: translateX(3px);
            transform: translateX(3px);
  }
  40% {
    -webkit-transform: translateX(-3px);
            transform: translateX(-3px);
  }
  60% {
    -webkit-transform: translateX(3px);
            transform: translateX(3px);
  }
  80% {
    -webkit-transform: translateX(-3px);
            transform: translateX(-3px);
  }
  100% {
    -webkit-transform: translateX(0px);
            transform: translateX(0px);
  }
}
.loginBlock{
  text-align: -webkit-center;
}
button.button.button-block.loginButton{
  width: 50%;
}

